--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
       });
   }
 }
-
+//Почем уне работают лайки? они айди не идентифицируют?
   const likesPlus = () => {
     const heartsElement = document.querySelectorAll(".like-button");
 
     for (const heartElement of heartsElement) {
       heartElement.addEventListener("click", (event) => {
         event.stopPropagation();
-      const index = heartElement.dataset.index;
-          if (commentsContainer[index].isLiked === false) {
-            commentsContainer[index].isLiked = true;
-            commentsContainer[index].commentLikes += 1;
+      const id = heartElement.dataset.id;
+          if (commentsContainer[id].isLiked === false) {
+            commentsContainer[id].isLiked = true;
+            commentsContainer[id].likes += 1;
           } else 
-            if (commentsContainer[index].isLiked === true) {
-            commentsContainer[index].isLiked = false;
-            commentsContainer[index].commentLikes -= 1;
+            if (commentsContainer[id].isLiked === true) {
+            commentsContainer[id].isLiked = false;
+            commentsContainer[id].likes -= 1;
           }
       renderscommentsContainer();
       });
@@ -103,34 +103,34 @@
      // получили данные и рендерим их в приложении
      
      commentsContainer = responseData.comments;
-      rendersComments();
+      renderscommentsContainer();
     });
   });
 
   const renderscommentsContainer = () => {
     const commentsContainerHtml = commentsContainer.map((commentUser, index) => {
-      return `<li data-index="${index}" class="comment">
+      //сомнительно 
+      return `<li data-id="${commentUser.id}" class="comment">
           <div class="comment-header">
-            <div>${commentUser.name}</div>
+            <div>${commentUser.author.name}</div>
             <div>
-              ${commentUser.commentDate}
+              ${commentUser.date}
               </div>
           </div>
           <div class="comment-body">
             <div style="white-space: pre-line" class="comment-text">
-              ${commentUser.commentText}
+              ${commentUser.text}
             </div>
           </div>
           <div class="comment-footer">
             <div class="likes">
-              <span class="likes-counter">${commentUser.commentLikes}</span>
-              <button data-index="${index}" class="${commentUser.isLiked ? 'like-button -active-like' : 'like-button'}"></button>
+              <span class="likes-counter">${commentUser.likes}</span>
+              <button data-id="${commentUser.id}" class="${commentUser.isLiked ? 'like-button -active-like' : 'like-button'}"></button>
             </div>
           </div>
         </li>`;
     }).join('');
-   /* commentsContainerHtml.replaceAll("BEGIN_QUOTE", "<div class='quote'>")
-      .replaceAll("QUOTE_END", "</div>"); */
+   
       listElement.innerHTML = commentsContainerHtml;
     likesPlus();
    commentsAnswer();
@@ -146,24 +146,36 @@
       return;
     }
 
-    commentsContainer.push({
-      name: nameElement.value
-      .replaceAll("&", "&amp;")
-        .replaceAll("<", "&lt;")
-        .replaceAll(">", "&gt;")
-        .replaceAll('"', "&quot;"),
-      commentDate: myTime,
-      commentText: commentElement.value
-      .replaceAll("&", "&amp;")
-        .replaceAll("<", "&lt;")
-        .replaceAll(">", "&gt;")
-        .replaceAll('"', "&quot;"),
-      commentLikes: 0,
-      isLiked: false,
-    });
-      nameElement.value = '';
-      commentElement.value = '';
-      renderscommentsContainer();
+    fetch("https://webdev-hw-api.vercel.app/api/v1/kolesnichenko-a/comments", {
+      method: "POST",
+      body: JSON.stringify ({
+          date: myTime(),
+        likes: 0,
+        isLiked: false,
+        text: commentElement.value
+          .replaceAll("&", "&amp;")
+          .replaceAll("<", "&lt;")
+          .replaceAll(">", "&gt;")
+          .replaceAll('"', "&quot;"),
+        //в контейнере автор, у других нейм ???
+        author: nameElement.value
+          .replaceAll("&", "&amp;")
+          .replaceAll("<", "&lt;")
+          .replaceAll(">", "&gt;")
+          .replaceAll('"', "&quot;"),
+      })
+    })
+    .then((response) => {
+    return response.json();
+  })
+  .then((responseData) => {
+    commentsContainer = responseData.comments;
+    renderscommentsContainer();
+  });
+
+  renderscommentsContainer();
+    commentElement.value = "";
+    nameElement.value = "";
   });
 
 </script>
