--- a/мои мучения.html
+++ b/мои мучения.html
@@ -18,7 +18,7 @@
     </ul>
     <div class="add-form">
       <input id="inputName" type="text" class="add-form-name" placeholder="Введите ваше имя">
-      <textarea id="inputComment" type="textarea" class="add-form-text" placeholder="Введите ваш комментарий"
+      <textarea id="inputComment" type="textarea" class="add-form-text" placeholder="Введите ваш коментарий"
         rows="4"></textarea>
       <div class="add-form-row">
         <button id="buttonComent" class="add-form-button">Написать</button>
@@ -34,39 +34,29 @@
   const commentElement = document.getElementById('inputComment');
   const likesContainerElement = document.getElementById('.likes-counter');
 
-  let commentsContainer;
-
-  function apiGet() {
-    fetch(
-      "https://webdev-hw-api.vercel.app/api/v1/kolesnichenko-a/comments",
-      { method: "GET" }
-    )
-      .then((response) => {
-        return response.json();
-      })
-      .then((response) => {
-        commentsContainer = response.comments;
-        renderscommentsContainer();
-      })
-  }
+  let commentsContainer = [];
 
   let fetchPromise = fetch(
     "https://webdev-hw-api.vercel.app/api/v1/kolesnichenko-a/comments",
-    { method: "GET" }
+    {method: "GET"}
   );
-
-  fetchPromise
-    .then((response) => {
-      let jsonPromise = response.json();
-      jsonPromise.then((responseData) => {
-        commentsContainer = responseData.comments;
-        renderscommentsContainer();
-      });
+  fetchPromise.then((response) => {
+    // Запускаем преобразовываем "сырые" данные от API в json формат
+    const jsonPromise = response.json();
+    // Подписываемся на результат преобразования
+    jsonPromise.then((responseData) => {
+      console.log(responseData);
+     // получили данные и рендерим их в приложении
+     
+     commentsContainer = responseData.comments;
+      renderscommentsContainer();
     });
+  });
 
-  function renderscommentsContainer() {
+  function renderscommentsContainer(){
     const commentsContainerHtml = commentsContainer.map((commentUser, id) => {
-      return `<li data-id="${id}" class="comment">
+      //сомнительно 
+      return `<li data-id="${commentUser.id}" class="comment">
           <div class="comment-header">
             <div>${commentUser.author.name}</div>
             <div>
@@ -81,15 +71,18 @@
           <div class="comment-footer">
             <div class="likes">
               <span class="likes-counter">${commentUser.likes}</span>
-              <button data-id="${id}" class="${commentUser.isLiked ? 'like-button -active-like' : 'like-button'}"></button>
+              <button data-id="${commentUser.id}" class="${commentUser.isLiked ? 'like-button -active-like' : 'like-button'}"></button>
             </div>
           </div>
         </li>`;
     }).join('');
-    listElement.innerHTML = commentsContainerHtml;
+   
+      listElement.innerHTML = commentsContainerHtml;
     likesPlus();
-    commentsAnswer();
+   commentsAnswer();
   }
+
+  renderscommentsContainer();
 
   function likesPlus() {
     const heartsElement = document.querySelectorAll(".like-button");
@@ -97,16 +90,16 @@
     for (const heartElement of heartsElement) {
       heartElement.addEventListener("click", (event) => {
         event.stopPropagation();
-        const id = heartElement.dataset.id;
-        if (commentsContainer[id].isLiked === false) {
-          commentsContainer[id].isLiked = true;
-          commentsContainer[id].likes += 1;
-        } else
-          if (commentsContainer[id].isLiked === true) {
+      const id = heartElement.dataset.id;
+          if (commentsContainer[id].isLiked === false) {
+            commentsContainer[id].isLiked = true;
+            commentsContainer[id].likes += 1;
+          } else 
+            if (commentsContainer[id].isLiked === true) {
             commentsContainer[id].isLiked = false;
             commentsContainer[id].likes -= 1;
           }
-        renderscommentsContainer();
+      renderscommentsContainer();
       });
     }
   }
@@ -135,21 +128,22 @@
 
   myTime = day + "." + month + "." + year + " " + hour + ":" + minute
 
+  
 
-
-  function commentsAnswer() {
+  function commentsAnswer(){
     const commentsAnswer = document.querySelectorAll(".comment");
+    
     for (const commentAnswer of commentsAnswer) {
       commentAnswer.addEventListener("click", () => {
-        const index = commentAnswer.dataset.id;
-        commentElement.value = ">" + commentsContainer[index].text + " " + commentsContainer[index].author.name + ",";
+        const index = commentAnswer.dataset.index;
+        commentElement.value = ">" + commentsContainer[index].commentText + " " + commentsContainer[index].name + ",";
       });
-    }
   }
+}
 
-
-
-
+  
+  
+  
 
   buttonElement.addEventListener("click", () => {
     nameElement.classList.remove("error");
@@ -158,23 +152,42 @@
       commentElement.classList.add("error");
       return;
     }
+console.log(myTime);
+console.log(commentElement.value);
+console.log(nameElement.value);
 
     fetch("https://webdev-hw-api.vercel.app/api/v1/kolesnichenko-a/comments", {
       method: "POST",
-      body:
-        JSON.stringify({
-          text: commentElement.value,
-          name: nameElement.value,
-        })
+      body: 
+      JSON.stringify ({
+        //тут надо вставить функцию времени
+          date: myTime,
+        likes: 0,
+        isLiked: false,
+        text: commentElement.value,
+        //  .replaceAll("&", "&amp;")
+         // .replaceAll("<", "&lt;")
+         // .replaceAll(">", "&gt;")
+         // .replaceAll('"', "&quot;"),
+        //в контейнере автор, у других нейм ???
+        author: nameElement.value,
+        //  .replaceAll("&", "&amp;")
+         // .replaceAll("<", "&lt;")
+         // .replaceAll(">", "&gt;")
+         // .replaceAll('"', "&quot;"),
+      })
     })
-      .then((response) => {
-        return response.json();
-      })
-      .then(() => {
-        commentElement.value = "";
-        nameElement.value = "";
-        apiGet();
-      })
+    .then((response) => {
+    return response.json();
+  })
+  .then((responseData) => {
+    commentsContainer = responseData.comments;
+    renderscommentsContainer();
+  });
+
+  renderscommentsContainer();
+    commentElement.value = "";
+    nameElement.value = "";
   });
 
 </script>
