modified:   index.html modified:   index.js

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     }
   </style>
   <div class="container">
+    <p id="loaderStart" >ЗАГРУЗКА...</p>
     <ul id="list" class="comments">
       <!--Список рендерится из JS-->
     </ul>
+    <div id="loaderComment" class="add-form" style="display: none">Комментарий загружается</div>
     <div id="add-form" class="add-form">
       <input id="inputName" type="text" class="add-form-name" placeholder="Введите ваше имя">
       <textarea id="inputComment" type="textarea" class="add-form-text" placeholder="Введите ваш комментарий"
