--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </div>
     </div>
   </body>
-
+  <script type="module" src="./render.js"></script>
+<script type="module" src="./api.js"></script>
   <script src="index.js"></script>
 </html>
