modified:   api.js modified:   index.html modified:   index.js

--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
   </body>
   <script type="module" src="./render.js"></script>
 <script type="module" src="./api.js"></script>
-  <script type="module" src="./index.js"></script>
+  <script src="./index.js"></script>
 </html>
