--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     </div>
   </body>
 
-  <script src="index.js"></script>
+  <script type="module" src="index.js"></script>
+  <script type="module" src="./api.js"></script>
 </html>
