--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     </div>
   </body>
 
-  <script type="module" src="index.js"></script>
+  <script src="index.js"></script>
   <script type="module" src="./api.js"></script>
 </html>
