modified:   index.html modified:   index.js modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -11,26 +11,11 @@
         background-color: blanchedalmond;
       }
     </style>
-    <div class="container">
-      <p id="loaderStart" class="loaderStart">ЗАГРУЗКА...</p>
-      <ul id="list" class="comments">
-        <!--Список рендерится из JS-->
-      </ul>
-      <div id="loaderComments" class="loaderComments">Комментарий загружается</div>
-      <div id="add-form" class="add-form">
-        <input id="inputName" type="text" class="add-form-name" placeholder="Введите ваше имя" />
-        <textarea
-          id="inputComment"
-          type="textarea"
-          class="add-form-text"
-          placeholder="Введите ваш комментарий"
-          rows="4"
-        ></textarea>
-        <div class="add-form-row">
-          <button id="buttonComent" class="add-form-button">Написать</button>
-        </div>
-      </div>
+    <p id="loaderStart" class="loaderStart">ЗАГРУЗКА...</p>
+    <div id="app">
+      
     </div>
+   
   </body>
 
   <script src="index.js"></script>
